--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -45,6 +45,9 @@ sites:
   - name: netchicks
     url: https://netchicks-f1492f08-f236-4a55-afb7-70ded209cb24.s3.eu-west-2.amazonaws.com/index.html
     __dangerous__disable_verify_peer: true
+  - name: youtubeclone
+    url: https://youtube.craftstudios.shop/
+    __dangerous__disable_verify_peer: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
