--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -51,6 +51,9 @@ sites:
   - name: bitwarden
     url: https://bitwarden.craftstudios.shop/
     __dangerous__disable_verify_peer: true
+  - name: photos
+    url: https://photos.craftstudios.shop/
+    __dangerous__disable_verify_peer: true
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
