--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,11 @@ owner: hupratt # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Shop
-    url: https://shop.lapetiteportugaise.eu
+  - name: trello
+    url: https://trello.craftstudios.shop/
+    __dangerous__disable_verify_peer: true
+  - name: recipes
+    url: https://recipes.craftstudios.shop/
     __dangerous__disable_verify_peer: true
   - name: Posthog
     url: https://posthog.craftstudios.shop/setup_admin
@@ -51,11 +54,11 @@ sites:
   - name: bitwarden
     url: https://bitwarden.craftstudios.shop/
     __dangerous__disable_verify_peer: true
-  - name: trello
-    url: https://trello.craftstudios.shop/
-    __dangerous__disable_verify_peer: true
   - name: retro
     url: https://retro.craftstudios.shop/
+    __dangerous__disable_verify_peer: true
+  - name: Shop
+    url: https://shop.lapetiteportugaise.eu
     __dangerous__disable_verify_peer: true
     
 status-website:
