--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -60,8 +60,11 @@ sites:
   - name: retro
     url: https://retro.craftstudios.shop/
     __dangerous__disable_verify_peer: true
-  - name: Shop
+  - name: shop
     url: https://shop.lapetiteportugaise.eu
+    __dangerous__disable_verify_peer: true
+  - name: spotify
+    url: https://spotify.lapetiteportugaise.eu
     __dangerous__disable_verify_peer: true
     
 status-website:
