--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,6 +6,9 @@ sites:
   - name: trello
     url: https://trello.craftstudios.shop/
     __dangerous__disable_verify_peer: true
+  - name: chirpy
+    url: https://chirpy.craftstudios.shop/
+    __dangerous__disable_verify_peer: true
   - name: mealie
     url: https://mealie.craftstudios.shop/
     __dangerous__disable_verify_peer: true
